# LLM_DWA

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yml  start-novnc.sh
ros2_ws/house/: house.pgm  house.yaml
ros2_ws/jh_world/: my_map.pgm  my_map.yaml
ros2_ws/jh_world_2/: my_map_2.pgm  my_map_2.yaml
ros2_ws/src/turtlebot3_llm_nav2/: package.xml  setup.py
ros2_ws/src/turtlebot3_llm_nav2/api/: api_1shot.py  api_image_1shot.py  api_image_zeroshot.py  api_zeroshot.py
ros2_ws/src/turtlebot3_llm_nav2/config/: world_setting.yaml
ros2_ws/src/turtlebot3_llm_nav2/data/: jh_world_2.world  obstacle.json  waypoints.json
ros2_ws/src/turtlebot3_llm_nav2/scripts/: call_image.py  call_llm.py  get_user_input.py  parse_world.py  run_image_pipeline.py  run_llm_pipeline.py
ros2_ws/src/turtlebot3_llm_nav2/turtlebot3_llm_nav2/script/: waypoint_navigator.py
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: jh_world.launch.py  jh_world_2.launch.py  turtlebot3_house.launch.py  warehouse.launch.py
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/jh_world/: model.config  model.sdf
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
ros2_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: jh_world.world
