<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_llm_nav2</name>
  <version>0.0.1</version>
  <description>
    Nav2 + LLM integration package for TurtleBot3.
  </description>
  <maintainer email="sjh0621@gachon.ac.kr">Seo</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>